# mailcom

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  codecov.yml  get-models.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.github/ISSUE_TEMPLATES/: bug.md  feature.md
.github/workflows/: ci.yml  docs.yml  release.yml
anonymizer/: in_out.py  inout.py  parse.py
anonymizer/test/: test_inout.py  test_parse.py
data/in/: sample_data.csv
docs/source/: conf.py  index.rst  mailcom.rst
docs/source/notebooks/: demo.ipynb  demo_200_eml.ipynb  eval_data_200_eml.ipynb  performance_demo.ipynb
mailcom/: __init__.py  default_settings.json  inout.py  lang_detector.py  main.py  parse.py  setting_schema.json  settings.json  time_detector.py  utils.py
mailcom/test/: settings_for_testing.json  test_inout.py  test_lang_detector.py  test_main.py  test_parse.py  test_time_detector.py  test_utils.py
mailcom/test/data/: 34.eml  only_html.eml  test.out  test.xml
notebook/: 200_eml.ipynb  batching_performance.ipynb  demo.ipynb  performance_demo.ipynb
source/: conf.py
source/notebooks/: eval_data_200_eml.ipynb  performance_demo.ipynb
src/anonymizer/: in_out.py  parse.py
