[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mailcom"
license = {text = "MIT License"}
readme = "README.md"
description = "Pseudonymize email content in Romance languages"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
authors = [
  { name="Inga Ulusoy", email="ssc@iwr.uni-heidelberg.de" },
  { name="Thore Olthoff", email="ssc@iwr.uni-heidelberg.de" },
]
version = "0.0.1"

dependencies = [
  "spacy",
  "transformers",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
]

[project.urls]
Homepage = "https://github.com/ssciwr/mailcom"
Issues = "https://github.com/ssciwr/mailcom/issues"