[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mailcom"
license = {text = "MIT License"}
readme = "README.md"
description = "Pseudonymize email content in Romance languages"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
authors = [
  { name="Inga Ulusoy", email="ssc@iwr.uni-heidelberg.de" },
  { name="Thore Olthoff", email="ssc@iwr.uni-heidelberg.de" },
]
version = "0.0.1"

dependencies = [
  "spacy",
  "transformers",
  "eml_parser",
  "bs4",
  "dicttoxml",
  "torch",
  "pandas",
  "jupyter",
  "matplotlib",
  "langid",
  "langdetect",
  "intervaltree",
  "dateparser",
  "datefinder",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
]

[project.urls]
Homepage = "https://github.com/ssciwr/mailcom"
Issues = "https://github.com/ssciwr/mailcom/issues"

[tool.pytest.ini_options]
markers = [
    "pattern: marks using pattern method",
    "langdet: marks tests related to language detection",
    "datelib : marks tests related to date library",
]