[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mailcom"
license = {text = "MIT License"}
readme = "README.md"
description = "Pseudonymize email content in Romance languages"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
authors = [
  { name="Inga Ulusoy", email="ssc@iwr.uni-heidelberg.de" },
  { name="Tuyen Le", email="ssc@iwr.uni-heidelberg.de" },
  { name="Felix Fleischle", email="ssc@iwr.uni-heidelberg.de" },
  { name="Thore Olthoff", email="ssc@iwr.uni-heidelberg.de" },
]
version = "0.1.1"

dependencies = [
  "spacy",
  "transformers",
  "eml_parser",
  "bs4",
  "dicttoxml",
  "torch",
  "pandas",
  "jupyter",
  "matplotlib",
  "langid",
  "langdetect",
  "intervaltree",
  "dateparser",
  "datefinder",
  "accelerate",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
]

[project.urls]
Homepage = "https://github.com/ssciwr/mailcom"
Issues = "https://github.com/ssciwr/mailcom/issues"

[tool.pytest.ini_options]
markers = [
    "pattern: marks using pattern method",
    "strict: marks using pattern method with strict mode",
    "langdet: marks tests related to language detection",
    "datelib : marks tests related to date library",
]